# EpicV2IO

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  publish-pypi.yml  publish-testpypi.yml  publish.yaml
scripts/: build_peters_manifest_parquet.R
src/epicv2io/: __init__.py  betas_analyzer.py  betas_loader.py  cg_probe_id.py  io.py  manifest.py
src/epicv2io/resources/: README.md
tests/: conftest.py  test_betas_analyzer.py  test_cg_probe_id.py  test_io.py  test_loading.py  test_manifest.py  test_production_manifest.py
