[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epicv2io"
version = "1.0.0"
description = "EPICv2 beta value loader and manifest utilities."
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE", "NOTICE"]
authors = [
  {name = "Marleen Streicher", email = "marleenstreicher@icloud.com"}
]
keywords = ["methylation", "EPICv2", "CpG", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "pandas>=1.5",
  "pyarrow>=10",
  "openpyxl",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "black",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
epicv2io = ["resources/*.parquet", "resources/README.md"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=epicv2io",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=80",
]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that read packaged resources or combine components",
]

[tool.coverage.run]
branch = true
source = ["epicv2io"]

[tool.coverage.report]
show_missing = true

[tool.pyright]
extraPaths = ["src"]